--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Busca Letras</h1>
     <form id="form">
       <input
+        autofocus
         id="search"
         type="text"
         placeholder="Insira o nome do artista ou da música..."
